# sanguine

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  dev-log-2026-07-15.md  dev-log-2026-07-16.md  dev-log-2026-07-17.md  dev-log-2026-07-20.md  dev-log-2026-07-21.md  dev-log-2026-07-22.md
examples/: run_automl.py
sanguine/: __init__.py  cli.py  errors.py  metrics.py  persistence.py  pipeline.py  report.py  sklearn_adapter.py
sanguine/data/: __init__.py  dataset.py  preprocess.py
sanguine/models/: __init__.py  base.py  baseline.py  forest.py  knn.py  logistic.py  naive_bayes.py  tree.py
sanguine/search/: __init__.py  automl.py  evolutionary.py  random_search.py  space.py
sanguine/service/: __init__.py  api.py  schemas.py
tests/: test_api.py  test_automl.py  test_metrics_and_data.py  test_models.py
