[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sanguine-automl"
version = "0.1.0"
description = "A from-scratch AutoML engine (models + evolutionary pipeline search in pure Python) for blood-donation prediction, with a leaderboard, model persistence and a serving API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akhil Vase" }]
keywords = ["automl", "machine-learning", "from-scratch", "tpot", "blood-donation", "evolutionary", "classification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Science/Research",
]
dependencies = []  # models + AutoML search are pure standard library

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2"]
sklearn = ["scikit-learn>=1.3"]
tpot = ["tpot>=0.12", "scikit-learn>=1.3"]
dev = ["pytest>=7", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2"]

[project.scripts]
sanguine = "sanguine.cli:main"

[project.urls]
Homepage = "https://github.com/avase33/sanguine"
Issues = "https://github.com/avase33/sanguine/issues"

[tool.setuptools.packages.find]
include = ["sanguine*"]

[tool.setuptools.package-data]
"sanguine.data" = ["*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
